--- a/packages/react-scripts/package.json
+++ b/packages/react-scripts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rethink-react-scripts",
-  "version": "3.0.0",
+  "version": "3.4.1-1.0.4",
   "description": "Configuration and scripts for Create React App.",
   "repository": {
     "type": "git",
